<resources>
    <string name="app_name">Movie_DB26</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="framgnet_favorite">framgnet favorite</string>
    <string name="fragment_home">fragment home</string>
    <string name="title_app">Movie DB 26</string>
    <string name="title_genres">Genres</string>
    <string name="title_most_popular">Most Popular</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_top_rate">Top Rate</string>
    <string name="error_network">Vui lòng kiểm tra lại mạng internet của bạn</string>
    <string name="sample_text">Deadpool 2</string>
    <string name="rating">Rating: </string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview</string>
    <string name="casts">Casts</string>
    <string name="production_companies">Production Companies</string>
    <string name="more_trailer">More Trailer</string>
    <string name="text_not_find">Can\'t not find any trailer</string>
    <string name="text_search_trailer">Search Trailer</string>
    <string name="headquarters">HeadQuarters</string>
    <string name="origin_country">Origin Country</string>
    <string name="text_company">Company</string>
    <string name="birth_day">Birth day:</string>
    <string name="popular">Popularity</string>
    <string name="biography">Biography</string>
    <string name="title_cast_detail">Cast Detail</string>
    <string name="title_movie_db">Movie DB</string>
</resources>
