<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="vn.com.framgia.movie_db26.screen.company.CompanyViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="vn.com.framgia.movie_db26.screen.company.CompanyActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_icon_back"
                android:layout_width="@dimen/dp_48"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:onClick="@{viewModel::onBack}"
                android:src="@drawable/ic_arrow_back_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_title"
                style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/text_company"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_icon_app"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.v7.widget.CardView
                android:id="@+id/card_company_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_160"
                android:layout_marginLeft="@dimen/dp_4"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_8"
                app:cardCornerRadius="@dimen/dp_8"
                app:cardElevation="@dimen/dp_8"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_company_profile"
                    setAvatar="@{viewModel.company.logoPath}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dp_2"
                    android:scaleType="fitXY" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/text_company_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_4"
                android:ellipsize="marquee"
                android:focusable="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:text="@{viewModel.company.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/color_text_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_company_profile" />

            <TextView
                android:id="@+id/text_company_headquarters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_36"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/headquarters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_company_name" />

            <TextView
                android:id="@+id/text_company_headquarters_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:text="@{viewModel.company.headquarters}"
                app:layout_constraintStart_toEndOf="@+id/text_company_headquarters"
                app:layout_constraintTop_toTopOf="@+id/text_company_headquarters" />

            <TextView
                android:id="@+id/text_company_origin_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_36"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/origin_country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_company_headquarters" />

            <TextView
                android:id="@+id/text_company_origin_country_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:text="@{viewModel.company.originCountry}"
                app:layout_constraintStart_toEndOf="@+id/text_company_origin_country"
                app:layout_constraintTop_toTopOf="@+id/text_company_origin_country" />

            <TextView
                android:id="@+id/text_company_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/overview"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/color_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_company_origin_country_value" />

            <TextView
                android:text="@{viewModel.company.description}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_company_overview">

                <requestFocus />
            </TextView>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>
