<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="vn.com.framgia.movie_db26.screen.cast.CastDetailViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="vn.com.framgia.movie_db26.screen.cast.CastDetailActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_icon_app"
                android:layout_width="@dimen/dp_48"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:onClick="@{viewModel::onBack}"
                android:src="@drawable/ic_arrow_back_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_title"
                style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/title_cast_detail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_icon_app"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_person_profile"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_180"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:layout_marginTop="@dimen/dp_4"
                    app:cardCornerRadius="@dimen/dp_8"
                    app:cardElevation="@dimen/dp_6"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        setAvatar="@{viewModel.castDetail.profilePath}"
                        android:id="@+id/image_person_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/text_person_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:text="@{viewModel.castDetail.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="@color/color_text_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/card_person_profile"
                    app:layout_constraintTop_toTopOf="@+id/card_person_profile" />

                <TextView
                    android:id="@+id/text_person_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/birth_day"
                    app:layout_constraintStart_toEndOf="@+id/card_person_profile"
                    app:layout_constraintTop_toBottomOf="@+id/text_person_name" />

                <TextView
                    android:id="@+id/text_person_birthday_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@{viewModel.castDetail.birthday}"
                    app:layout_constraintStart_toEndOf="@+id/text_person_birthday"
                    app:layout_constraintTop_toTopOf="@+id/text_person_birthday" />

                <TextView
                    android:id="@+id/text_person_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/popular"
                    app:layout_constraintStart_toStartOf="@+id/text_person_birthday"
                    app:layout_constraintTop_toBottomOf="@+id/text_person_birthday" />

                <TextView
                    android:id="@+id/text_person_popular_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@{``+viewModel.castDetail.popularity}"
                    app:layout_constraintStart_toEndOf="@+id/text_person_popular"
                    app:layout_constraintTop_toBottomOf="@+id/text_person_birthday" />

                <TextView
                    android:id="@+id/text_person_biography"
                    style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.TextTitleChild"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/biography"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_person_profile" />

                <TextView
                    android:id="@+id/text_person_biograpy_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@{viewModel.castDetail.biography}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_person_biography">

                    <requestFocus />
                </TextView>

            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>
